--- a/article.html
+++ b/article.html
@@ -45,6 +45,7 @@
 		<!-- Two -->
 		<section class="wrapper style2">
 			<div class="inner">
+				<div>
 				<h2>All Time Blockbusters - Aamir Khan</h2>
 				<hr style="margin-top: -20px;">
 				<h5>Sunday | 02 May 2021 | 4:30 PM IST</h5>
@@ -70,35 +71,15 @@
 				<h4>• Why Salman made gap in Radhe</h4>
 				<h4>• Aamir takes too much time</h4>
 				<h4>• The failure of Kalank</h4>
-				<h4>• Tanhaji Final Box Office Collection</h4><br><br>
+				<h4>• Tanhaji Final Box Office Collection</h4>
 				<hr>
-				<div class="y6Uyqe">
-					<div class="EIaa9b">
-						<div class="AJLUJb"><a class="k8XOCe" href="#">
-								<div class="aXBZVd"></div>
-								<div class="s75CSd yF4bGf j6iBde">cakes india</div>
-							</a><a class="k8XOCe" href="#" >
-								<div class="aXBZVd"></div>
-								<div class="s75CSd yF4bGf j6iBde">cakes for girls</div>
-							</a><a class="k8XOCe" href="#">
-								<div class="aXBZVd"></div>
-								<div class="s75CSd yF4bGf j6iBde">types of cakes</div>
-							</a></div>
-						<div class="AJLUJb"><a class="k8XOCe"
-								href="#">
-								<div class="aXBZVd"></div>
-								<div class="s75CSd yF4bGf j6iBde">cakes shop</div>
-							</a><a class="k8XOCe"
-								href="#">
-								<div class="aXBZVd"></div>
-								<div class="s75CSd yF4bGf j6iBde">cakes for boys</div>
-							</a><a class="k8XOCe"
-								href="#">
-								<div class="aXBZVd"></div>
-								<div class="s75CSd yF4bGf j6iBde">cakes names</div>
-							</a></div>
-					</div>
-				</div>
+			</div>
+			<div class="flex"> 
+				<a href="#" class="sdds btn1">Master Box Office Collection in India etc</a> 
+				<a href="#" class="sdds btn2">Master Collection in India etc</a> 
+				<a href="#" class="sdds btn3">Master Box Office  etc</a> 
+				<a href="#" class="sdds btn4">Master Collection in India etc</a>
+			</div>
 			</div>
 		</section>
 	</div>
@@ -155,4 +136,3 @@
 </body>
 
 </html>
-
