--- a/article.html
+++ b/article.html
@@ -62,7 +62,7 @@
 					superstar of bollywood since last decade. He is the only
 					Actor to give 3 <b>All Time Blockbuster</b> movies last decade whereas <b>Salman</b> gave only one.
 					It all happend because of
-					his perfectionist behaviour. So on ........................................................</p>
+					his perfectionist behaviour. So on ...................................................</p>
 				<hr><br><br>
 				<h3>Other Latest Box Office Reports & Articles:</h3>
 				<hr>
