--- a/rep_art.html
+++ b/rep_art.html
@@ -63,7 +63,7 @@
                             </p>                       
 
                     </div>
-                </div>
+                </div><hr class="gyb">
                 <br>
                 <div class="row wor">
                     <div class="col">
@@ -79,7 +79,7 @@
                             </p>                       
 
                     </div>
-                </div>
+                </div> <hr class="gyb">
                 <br>
                 <div class="row wor">
                     <div class="col">
@@ -95,7 +95,7 @@
                             </p>                       
 
                     </div>
-                </div>
+                </div> <hr class="gyb">
                 <br>
                 <div class="row wor">
                     <div class="col">
@@ -111,7 +111,7 @@
                             </p>                       
 
                     </div>
-                </div>
+                </div> <hr class="gyb">
                 <br>
                 <div class="row wor">
                     <div class="col">
@@ -127,7 +127,7 @@
                             </p>                       
 
                     </div>
-                </div>
+                </div> <hr class="gyb">
                 <br>
                 <div class="row wor">
                     <div class="col">
@@ -143,7 +143,7 @@
                             </p>                       
 
                     </div>
-                </div>
+                </div> <hr class="gyb">
                 <br>
                 <div class="row wor">
                     <div class="col">
@@ -159,7 +159,7 @@
                             </p>                       
 
                     </div>
-                </div>
+                </div> <hr class="gyb">
                 <br>
                 <div class="row wor">
                     <div class="col">
@@ -175,7 +175,7 @@
                             </p>                       
 
                     </div>
-                </div>
+                </div> <hr class="gyb">
                 <br>
                 <div class="row wor">
                     <div class="col">
@@ -191,7 +191,7 @@
                             </p>                       
 
                     </div>
-                </div>
+                </div> <hr class="gyb">
                 <br>
                 <div class="row wor">
                     <div class="col">
@@ -207,7 +207,7 @@
                             </p>                       
 
                     </div>
-                </div>
+                </div> <hr class="gyb">
                 <br>
                 <div class="row wor">
                     <div class="col">
@@ -223,7 +223,7 @@
                             </p>                       
 
                     </div>
-                </div>
+                </div> <hr class="gyb">
                 <br>
                 <div class="row wor">
                     <div class="col">
@@ -239,7 +239,7 @@
                             </p>                       
 
                     </div>
-                </div>
+                </div> <hr class="gyb">
                 <br>
                 <div class="butn">
                     <a href="#"><button>Previous</button></a>
